[metadata]
name = wifitop
summary = Information about nearby wifi networks
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Marcus Hardt
author-email = hardt@kit.edu

home-page = https://github.com/marcvs/wifitop
project_urls =
    Bug Tracker = https://github.com/marcvs/wifitop
    Documentation = https://wifitop.readthedocs.io/en/latest/

license = MIT 
license_file = LICENSE

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Utilities

[options.entry_points]
console_scripts =
    wifitop=wifitop.top:main

[bdist_wheel]
universal = 1

[files]
packages =
    wifitop

[flake8]
ignore = D203
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist
#max-complexity = 10
max-line-length = 99
